chore: save int_main baseline before UDI fusion